--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nestedcomments",
   "version": "0.1.0",
+  "homepage": "https://HealthySG.github.io/NestedCommentsProject",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -24,9 +25,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-	    "predeploy": "npm run build",
-	    "deploy": "gh-pages -d build"
-           
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
